// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateComponent /> should render with given props when isSelected is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      },
      Object {
        "height": 50,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#a9a9a9",
          "fontSize": 16,
          "fontWeight": "bold",
        },
        Object {
          "fontSize": 16,
        },
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`<DateComponent /> should render with given props when isSelected is true 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 2,
        "justifyContent": "center",
      },
      Object {
        "height": 50,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FF1493",
        },
        Object {
          "borderRadius": 20.833333333333336,
          "height": 41.66666666666667,
          "width": 41.66666666666667,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#a9a9a9",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "fontSize": 16,
            },
          ]
        }
      >
        1
      </Text>
    </View>
  </View>
</View>
`;
